force-app/main/default/objects/DSales_Matriz_GEX__c/fields/DSALES_Activo__c.field-meta.xml
<CustomField>
    <fullName>dsalesActivo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica cuando una matriz original está activa</description>
    <label>Activo</label>
    <type>Checkbox</type>
</CustomField>