force-app/main/default/objects/DSales_Matriz_GEX__c/fields/DSALES_Region__c.field-meta.xml
<CustomField>
    <fullName>dsalesRegion__c</fullName>
    <description>Lista de selección de Región</description>
    <label>Región</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DSALES_Region</valueSetName>
    </valueSet>
</CustomField>