force-app/main/default/objects/DSales_Matriz_GEX__c/fields/dsalesInstalacion__c.field-meta.xml
<CustomField>
    <fullName>dsalesInstalacion__c</fullName>
    <formula>IF(RecordType.Name =&apos;Matriz de Instalación&apos; , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Es Matriz de Instalación?</label>
    <type>Checkbox</type>
</CustomField>