force-app/main/default/objects/DSales_Matriz_GEX__c/recordTypes/dsalesMatrizAR.recordType-meta.xml
<RecordType>
    <fullName>dsalesMatrizAR</fullName>
    <active>true</active>
    <description>Tipo de registro para las matrices de armado</description>
    <label>Matriz de Armado</label>
</RecordType>