force-app/main/default/objects/DSales_Matriz_GEX__c/recordTypes/dsalesMatrizGEX.recordType-meta.xml
<RecordType>
    <fullName>dsalesMatrizGEX</fullName>
    <active>true</active>
    <description>Tipo de registro para las matrices de GEX</description>
    <label>Matriz Garantía Extendida</label>
</RecordType>